--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,8 +32,8 @@ jobs:
     - name: Build with Maven
       run: mvn clean install
     - name: Publish Test Results
-      uses: mikepenz/action-junit-report@v5
+      uses: EnricoMi/publish-unit-test-result-action@v2
       if: always()
       with:
-        report_paths: |
-          target/surefire-reports/*.xml
+        files: |
+           target/**/*.xml
