pom.xml: added pitest plugin to run mutation tests

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -37,3 +37,5 @@ jobs:
       with:
         files: |
            target/**/*.xml
+    - name: Mutation tests
+      run: mvn test-compile org.pitest:pitest-maven:mutationCoverage
