--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,7 +6,7 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Java CI with Maven
+name: Java CI with Maven Custom
 
 on:
   push:
@@ -49,7 +49,7 @@ jobs:
       uses: actions/upload-pages-artifact@v1
       with:
                  # Upload the coverage directory from the repository
-            path: './target/pit-reports'
+            path: 'target/pit-reports'
     - name: Deploy to GitHub Pages
       id: deployment
       uses: actions/deploy-pages@v1
