--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,9 +14,7 @@ on:
   pull_request:
     branches: [ "master" ]
 
-permissions:
-  id-token: write
-  pages: write
+
 
 jobs:
   build:
@@ -43,13 +41,13 @@ jobs:
            target/**/*.xml
     - name: Mutation tests
       run: mvn test-compile org.pitest:pitest-maven:mutationCoverage
-    - name: Setup Pages
-      uses: actions/configure-pages@v2
-    - name: Upload artifact
-      uses: actions/upload-pages-artifact@v1
-      with:
-                 # Upload the coverage directory from the repository
-            path: 'target/pit-reports'
-    - name: Deploy to GitHub Pages
-      id: deployment
-      uses: actions/deploy-pages@v1
+#    - name: Setup Pages
+      #      uses: actions/configure-pages@v2
+      #    - name: Upload artifact
+      #     uses: actions/upload-pages-artifact@v1
+        #     with:
+        #           # Upload the coverage directory from the repository
+      #      path: 'target/pit-reports'
+      # - name: Deploy to GitHub Pages
+      #   id: deployment
+    #  uses: actions/deploy-pages@v1
